objects/Grid_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Grid_Code_DDT__c</fullName>
        <label>Code DDT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Document_Key__c</fullName>
        <label>Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Grid_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grid_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Year_of_Invoice__c</fullName>
        <label>Year of Invoice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>